# mit-ocw-wiki

./: .env~  .gitignore  AGENTS.md  CLAUDE.md  CROSSREF-STRATEGY.md  DESIGN.md  HANDOFF.md  OCW-LLM-WIKI-GIT.md  OCW-LLM-WIKI.md  PRD-CONTRIBUTION-IMPACT-MATRIX.md  README.md  TECHNICAL.md  WIKIMEDIA_DATABASE_SKILL.md~  WIKIMEDIA_PAGEVIEWS.md  Wiki MIT Technical Collaboration_Briefing.md  _checkpoint.json  git-advice.txt  requirements.txt
.claude/: active-file  scaffold-version  settings.json
archive/: AI_Continuation_Document-11May2026-1130.md  ocw-llm-wiki-execution.md
dashboard/: generate-ocw-census.py  index.html  ocw-census.js
docs/: AD-HOC-MATCH.md  ARTICLE-FOOTER-LINT.md  COLAB-ZERANK.md  CONTRIBUTION-LADDER.md  CONTRIBUTION-LEVELS.md  CONTRIBUTION-PROTOCOL.md  CONTRIBUTION-UI.md  DASHBOARD-DESIGN.md  HOWTO-NEW-PROVIDER.md  L1-REFIDEAS.md  L2-EXTERNAL-LINKS.md  RECOMMENDATION-EXCHANGE-PROTOCOL.md  ROADMAP.md  WIKIDATA-VECTORS.md  ZERANK-DEEP-INSPECTION.md  ZERANK-INTEGRATION.md  ZERANK-PIPELINE.md  crossref-strategy.md
notes/: 2026-05-09-batch-000.md  2026-05-09-batch-100.md  2026-05-09-batch-200.md  2026-05-09-batch-300.md  2026-05-09-batch-400.md  2026-05-09-batch-complete.md  classification-decision-log.md  (+8 more)
tools/article-footer-linter/: README.md  pyproject.toml
tools/article-footer-linter/src/article_footer_linter/: __init__.py  analyze.py  cli.py  fix.py  links.py
tools/article-footer-linter/tests/: test_analyze.py  test_fix.py
tools/article-footer-linter/tests/fixtures/: bullets-after-cats.txt  well-formed.txt  whitespace-issues.txt
(+4940 files in other folders)
