[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "article-footer-linter"
version = "0.1.0"
description = "Lint and fix Wikipedia article footers: structural issues, dead link detection"
requires-python = ">=3.10"
dependencies = [
    "mwparserfromhell>=0.6",
]

[project.optional-dependencies]
links = ["urllib3>=2.0"]

[project.scripts]
article-footer-lint = "article_footer_linter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
